[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/colored_transparent.png" type="Texture" id=1]
[ext_resource path="res://scenes/models/Platform.gd" type="Script" id=2]
[ext_resource path="res://assets/animations/PlatformAnimation.tres" type="Animation" id=3]

[sub_resource type="SegmentShape2D" id=1]
a = Vector2( -71.7076, -2.97953 )
b = Vector2( 47.0047, -2.97953 )

[node name="Platform" type="KinematicBody2D"]
position = Vector2( -1.78179, 3.11814 )
collision_mask = 3
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1.78179, 3.11814 )
scale = Vector2( 8.54803, 2 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 271.738, 86.727, 16.3125, 14.3808 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 11.2799, -5.34985 )
z_index = 2
shape = SubResource( 1 )
one_way_collision = true

[node name="PlatformTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="ShakeAnimation" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite")
playback_speed = 4.0
anims/PlatformAnimation = ExtResource( 3 )
[connection signal="timeout" from="PlatformTimer" to="." method="_on_PlatformTimer_timeout"]
